--- a/Components/Styles/TicketStyle.css
+++ b/Components/Styles/TicketStyle.css
@@ -11,11 +11,19 @@
   margin-bottom: 10px;
 }
 
-.Ticket-component p {
-  margin-bottom: 8px;
+.Ticket-component .ticket-info {
+  display: flex;
+  justify-content: space-between;
 }
 
-.Ticket-component p:last-child {
+.Ticket-component .ticket-info p {
+  margin-bottom: 8px;
+  font-size: 24px;
+  border-bottom: 1px solid black;
+  padding-bottom: 5px;
+}
+
+.Ticket-component .ticket-info p:last-child {
   margin-bottom: 0;
 }
 
